# SERVIR-Applied-Deep-Learning-Book

./: .gitignore  .nojekyll  README.md  _quarto.yml  about.qmd  index.html  index.md  index.qmd  references.bib  search.json
01_Introduction/: Introduction.txt
02-Data-Preparation/: index.html  index.ipynb  pyproject.toml
03_Semantic_Segmentation/: .gitignore  index.md  pyproject.toml
03_Semantic_Segmentation/01__Crop_Mapping/notebooks/: Rice_Mapping_Bhutan_2021.aux  Rice_Mapping_Bhutan_2021.tex  export_image_for_prediction.ipynb  prediction_dnn.ipynb
03_Semantic_Segmentation/01__Crop_Mapping/notebooks/additional_notebooks/: count_sample_size.ipynb  export_image_for_prediction.ipynb  generate_training_patches.ipynb  prediction_dnn.ipynb  prediction_unet.ipynb
04_Object_Detection/: index.html  index.ipynb  pyproject.toml
05_Time_Series/: index.html  index.ipynb
06_Eco_Process_Sim/: index.html  index.ipynb
07_Transfer_Learning/: index.html  index.ipynb
08_Fusion/: index.html  index.ipynb
09_Downscaling/: index.html  index.ipynb
10_Future/: index.ipynb
11_Ethics/: index.ipynb
12_Conclusions/: index.html  index.ipynb
_book/: index.html  references.html  search.json
_book/02-Data-Preparation/: index.html
_book/04_Object_Detection/: index.html
_book/05_Time_Series/: index.html
_book/06_Eco_Process_Sim/: index.html
_book/07_Transfer_Learning/: index.html
_book/08_Fusion/: index.html
_site/: about.html  index.html  references.html  robots.txt  search.json  sitemap.xml
docs/: about.html  index.html  links.md  references.html  search.json
(+21 files in other folders)
