[project]
name = "servir_geoai_handbook_ch01"
version = "0.1.0"
[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
servir_geoai_handbook_ch01 = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.9"
jupyter = ">=1.1.1,<2"
